<?xml version="1.0"?>
<package format="3">
  <name>nanomap_msgs</name>
  <version>0.0.0</version>
  <description>
    nanomap_msgs is the package defining msg types for the nanomap_ros package for transporting data created by the nanomap library.
  </description>
  <maintainer email="violet.walker.phd@gmail.com">Violet Walker</maintainer>
  <license>BSD</license>

  <author>Violet Walker</author>
  <author email="violet.walker.phd@gmail.com">Violet Walker</author>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <build_depend>rosidl_default_generators</build_depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
